2008-05-02  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-message.c: use GERROR2RVAL().

2008-04-30  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-bin.c: Add Gst::Bin#each_recurse and Gst::Bin#children_recurse
	which iterate/get all children of the bin and all its sub-bins recursively

2008-04-23  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-message.c: rbgerr_gerror2exception frees the passed error, don't
	free it again.

2008-04-21  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-pad.c: Implement Gst::Pad#set_active

2008-04-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-element.c: allocate memory instead of using local variable.

	* src/rbgst.h: remove garbages.

	* src/rbgst-element.c: cleanup.

	* test/test_element.rb: add tests for GstElement#query and
	GstElement#send_event.

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-object.c: Implement a custom initialize that sinks the created
	GstObject

	* src/test_element.rb: Add a refcounting testcase for GstObject classes
	created inside ruby

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-element.c: Make Gst::Element#link_pads and
	Gst::Element#unlink_pads work like their C api counterparts (thus take source
	and sink names

	* src/rbgst-element.c: Implement Gst::Element#unlink

2008-04-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-ghost-pad.c: fix style.

	* src/rbgst.c (Init_gst_classes): fix style.

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-ghost-pad.c, src/rbgst.c: Implement Gst::GhostPad

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-element.c: _raise instead of _bug where appropriate

2008-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_event.rb: add.

	* src/rbgst-event.c: define class.

	* src/rbgst-event.c: add missing definition.

	* src/rbgst-event.c: fix style.

	* src/rbgst.c (Init_gst_classes):
	- remove a garbage.
	- fix style.

2008-04-15  Sjoerd Simons <sjoerd@luon.net>
